[gd_scene load_steps=8 format=2]

[ext_resource path="res://res/Explosion SFX.wav" type="AudioStream" id=1]
[ext_resource path="res://res/Reveal.wav" type="AudioStream" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://res/Swansea.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 72
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="RevealSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0

[node name="ExplosionSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Popup" type="PopupDialog" parent="."]
modulate = Color( 1, 1, 1, 0.74902 )
margin_left = 200.0
margin_top = 800.0
margin_right = 880.0
margin_bottom = 1120.0

[node name="GameOverLbl" type="Label" parent="Popup"]
margin_right = 680.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "YOU LOST"
align = 1
valign = 1

[node name="QuitBtn" type="Button" parent="Popup"]
margin_left = 128.0
margin_top = 240.0
margin_right = 248.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"

[node name="MenuBtn" type="Button" parent="Popup"]
margin_left = 440.0
margin_top = 240.0
margin_right = 560.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 3 )
text = "MENU"

[connection signal="pressed" from="Popup/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Popup/MenuBtn" to="." method="_on_MenuBtn_pressed"]
